--- a/downloads.html
+++ b/downloads.html
@@ -108,7 +108,7 @@
 
     <div class="row mb-5">
       <div class="col-xs-10 offset-xs-1 col-sm-10 offset-sm-1 col-lg-10 offset-lg-1">
-        <p>Steam Audio is available for free to all developers (<a href="https://valvesoftware.github.io/steam-audio/license.html">license agreement</a>). The latest release is 2.0-beta.13 (<a href="https://github.com/ValveSoftware/steam-audio/releases/tag/v2.0-beta.13">release notes</a>).</p>
+        <p>Steam Audio is available for free to all developers (<a href="https://valvesoftware.github.io/steam-audio/license.html">license agreement</a>). The latest release is 2.0-beta.14 (<a href="https://github.com/ValveSoftware/steam-audio/releases/tag/v2.0-beta.14">release notes</a>).</p>
       </div>
     </div>
 
@@ -117,7 +117,7 @@
         <img class="mb-1" src="assets/img/icon_unity_large.png">
         <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000; text-align: left; border-bottom: 4px solid #000; padding: 10px;">Unity Plugin</h6>
         <ul class="list-group">
-          <li class="list-group-item" style="background: none; border: none;"><a href="https://github.com/ValveSoftware/steam-audio/releases/download/v2.0-beta.13/steamaudio_unity_2.0-beta.13.zip" style="color: #000; font-size: 14pt;"><i class="fa fa-arrow-circle-down" style="margin-right: 8px;"></i> Unity Package</a></li>
+          <li class="list-group-item" style="background: none; border: none;"><a href="https://github.com/ValveSoftware/steam-audio/releases/download/v2.0-beta.14/steamaudio_unity_2.0-beta.14.zip" style="color: #000; font-size: 14pt;"><i class="fa fa-arrow-circle-down" style="margin-right: 8px;"></i> Unity Package</a></li>
           <li class="list-group-item" style="background: none; border: none;"><a href="doc/phonon_unity.html" style="color: #000; font-size: 14pt;"><i class="fa fa-arrow-circle-down" style="margin-right: 8px;"></i> User Manual (HTML)</a></li>
         </ul>
       </div>
@@ -134,8 +134,8 @@
         <img class="mb-1" src="assets/img/icon_c_api_large.png">
         <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000; text-align: left; border-bottom: 4px solid #000; padding: 10px;">C API</h6>
         <ul class="list-group">
-          <li class="list-group-item" style="background: none; border: none;"><a href="https://github.com/ValveSoftware/steam-audio/releases/download/v2.0-beta.13/steamaudio_api_2.0-beta.13.zip" style="color: #000; font-size: 14pt;"><i class="fa fa-arrow-circle-down" style="margin-right: 8px;"></i> C API (ZIP)</a></li>
-          <li class="list-group-item" style="background: none; border: none;"><a href="https://github.com/ValveSoftware/steam-audio/releases/download/v2.0-beta.13/steamaudio_api_2.0-beta.13.chm" style="color: #000; font-size: 14pt;"><i class="fa fa-arrow-circle-down" style="margin-right: 8px;"></i> Documentation (CHM)</a></li>
+          <li class="list-group-item" style="background: none; border: none;"><a href="https://github.com/ValveSoftware/steam-audio/releases/download/v2.0-beta.14/steamaudio_api_2.0-beta.14.zip" style="color: #000; font-size: 14pt;"><i class="fa fa-arrow-circle-down" style="margin-right: 8px;"></i> C API (ZIP)</a></li>
+          <li class="list-group-item" style="background: none; border: none;"><a href="https://github.com/ValveSoftware/steam-audio/releases/download/v2.0-beta.14/steamaudio_api_2.0-beta.14.chm" style="color: #000; font-size: 14pt;"><i class="fa fa-arrow-circle-down" style="margin-right: 8px;"></i> Documentation (CHM)</a></li>
         </ul>
       </div>
     </div>
@@ -154,7 +154,8 @@
         <img class="mb-1" src="assets/img/icon_archive_large.png">
         <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000; text-align: left; border-bottom: 4px solid #000; padding: 10px;">Other Downloads</h6>
         <ul class="list-group">
-          <li class="list-group-item" style="background: none; border: none;"><a href="https://github.com/ValveSoftware/steam-audio/releases/download/v2.0-beta.13/steamaudio_tan_2.0-beta.13.zip" style="color: #000; font-size: 14pt;"><i class="fa fa-arrow-circle-down" style="margin-right: 8px;"></i> TrueAudio Next Support (ZIP)</a></li>
+          <li class="list-group-item" style="background: none; border: none;"><a href="https://github.com/ValveSoftware/steam-audio/releases/download/v2.0-beta.14/steamaudio_embree_2.0-beta.14.zip" style="color: #000; font-size: 14pt;"><i class="fa fa-arrow-circle-down" style="margin-right: 8px;"></i> Embree Support (ZIP)</a></li>
+          <li class="list-group-item" style="background: none; border: none;"><a href="https://github.com/ValveSoftware/steam-audio/releases/download/v2.0-beta.14/steamaudio_tan_2.0-beta.14.zip" style="color: #000; font-size: 14pt;"><i class="fa fa-arrow-circle-down" style="margin-right: 8px;"></i> TrueAudio Next Support (ZIP)</a></li>
           <li class="list-group-item" style="background: none; border: none;"><a href="https://github.com/ValveSoftware/steam-audio/releases" style="color: #000; font-size: 14pt;"><i class="fa fa-external-link-square" style="margin-right: 8px;"></i> Releases on GitHub</a></li>
         </ul>
       </div>
