Update landing page.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
         <div class="col-sm-12 col-lg-12" style="text-align:center; text-transform:uppercase; letter-spacing: 3px;">
           <h3 style="font-size:16pt;">A Benchmark in</h3>
           <h1 style="font-size:48pt; font-family: MotivaSans-Bold;">Immersive Audio Solutions</h1>
-          <h2 style="font-size:30pt; margin-bottom:3em;">For games and VR</h2>
+          <h2 style="font-size:30pt; margin-bottom:1em;">For games and VR</h2>
+          <h3 style="font-size:16pt; margin-bottom:2em">3D Sound API &bull; PC, Mobile SDK &bull; Unity, Unreal, FMOD Plugins</h3>
           <a href="#learn-more" id="learn-more-button" class="btn btn-primary btn-lg text-uppercase" role="button">Learn More</a>
         </div>
       </div>
