--- a/downloads.html
+++ b/downloads.html
@@ -133,22 +133,22 @@
       </div>
 
       <div class="col-md-4 px-4 mb-5">
-        <img class="mb-1" src="assets/img/icon_c_api_large.png">
-        <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000; text-align: left; border-bottom: 4px solid #000; padding: 10px;">C API</h6>
+        <img class="mb-1" src="assets/img/icon_fmod_large.png">
+        <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000; text-align: left; border-bottom: 4px solid #000; padding: 10px;">FMOD Studio Plugin</h6>
         <ul class="list-group">
-          <li class="list-group-item" style="background: none; border: none;"><a href="https://github.com/ValveSoftware/steam-audio/releases/download/v4.1.0/steamaudio_4.1.0.zip" style="color: #000; font-size: 14pt;"><i class="fa fa-arrow-circle-down" style="margin-right: 8px;"></i> C API (ZIP)</a></li>
-          <li class="list-group-item" style="background: none; border: none;"><a href="doc/capi/index.html" style="color: #000; font-size: 14pt;"><i class="fa fa-arrow-circle-down" style="margin-right: 8px;"></i> Documentation (HTML)</a></li>
+          <li class="list-group-item" style="background: none; border: none;"><a href="https://github.com/ValveSoftware/steam-audio/releases/download/v4.1.0/steamaudio_fmod_4.1.0.zip" style="color: #000; font-size: 14pt;"><i class="fa fa-arrow-circle-down" style="margin-right: 8px;"></i> FMOD Studio Plugin (ZIP)</a></li>
+          <li class="list-group-item" style="background: none; border: none;"><a href="doc/fmod/index.html" style="color: #000; font-size: 14pt;"><i class="fa fa-arrow-circle-down" style="margin-right: 8px;"></i> User Manual (HTML)</a></li>
         </ul>
       </div>
     </div>
 
     <div class="row app-marketing-grid" style="color:#000;">
       <div class="col-md-4 px-4 mb-5">
-        <img class="mb-1" src="assets/img/icon_fmod_large.png">
-        <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000; text-align: left; border-bottom: 4px solid #000; padding: 10px;">FMOD Studio Plugin</h6>
+        <img class="mb-1" src="assets/img/icon_c_api_large.png">
+        <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000; text-align: left; border-bottom: 4px solid #000; padding: 10px;">C API</h6>
         <ul class="list-group">
-          <li class="list-group-item" style="background: none; border: none;"><a href="https://github.com/ValveSoftware/steam-audio/releases/download/v4.1.0/steamaudio_fmod_4.1.0.zip" style="color: #000; font-size: 14pt;"><i class="fa fa-arrow-circle-down" style="margin-right: 8px;"></i> Editor and Unity Plugin (ZIP)</a></li>
-          <li class="list-group-item" style="background: none; border: none;"><a href="doc/fmod/index.html" style="color: #000; font-size: 14pt;"><i class="fa fa-arrow-circle-down" style="margin-right: 8px;"></i> User Manual (HTML)</a></li>
+          <li class="list-group-item" style="background: none; border: none;"><a href="https://github.com/ValveSoftware/steam-audio/releases/download/v4.1.0/steamaudio_4.1.0.zip" style="color: #000; font-size: 14pt;"><i class="fa fa-arrow-circle-down" style="margin-right: 8px;"></i> C API (ZIP)</a></li>
+          <li class="list-group-item" style="background: none; border: none;"><a href="doc/capi/index.html" style="color: #000; font-size: 14pt;"><i class="fa fa-arrow-circle-down" style="margin-right: 8px;"></i> Documentation (HTML)</a></li>
         </ul>
       </div>
 
