--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
     <div class="row app-marketing-grid" style="color:#000;">
       <div class="col-md-2 offset-md-1 px-2 mb-5">
         <img class="mb-1" src="assets/img/icon_windows.png">
-        <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000;">PC</h6>
+        <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000;">Windows</h6>
       </div>
       <div class="col-md-2 px-2 mb-5">
         <img class="mb-1" src="assets/img/icon_osx.png">
