--- a/index.html
+++ b/index.html
@@ -289,15 +289,15 @@
 
     <div class="row">
       <div class="col-xs-10 offset-xs-1 col-sm-10 offset-sm-1 col-lg-10 offset-lg-1 white-gradient" style="padding: 4em;">
-        <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000; text-align: left; border-bottom: 4px solid #000; padding: 10px;">FMOD Studio plugin and more</h6>
+        <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000; text-align: left; border-bottom: 4px solid #000; padding: 10px;">Steam Audio Open Source Release</h6>
         <div class="row" style="text-align: justify;">
           <div class="col-md-5">
             <h4 style="font-family: MotivaSans-Bold">January 4, 2018</h4>
-            <p style="font-size: 14pt;">We've just released Steam Audio beta 12, and with it, we're excited to introduce our FMOD Studio plugin! This let you use the full range of spatial audio functionality available in Steam Audio to projects that use FMOD Studio.</p>
-            <p style="font-size: 14pt;"><a href="http://steamcommunity.com/games/596420/announcements/detail/1568807608827638582">Read More...</a></p>
+            <p style="font-size: 14pt;">We are excited to announce that with the latest release of Steam Audio, the complete source code of the Steam Audio SDK is now available as open source under an Apache-2.0 license.</p>
+            <p style="font-size: 14pt;"><a href="http://steamcommunity.com/games/596420/announcements/detail/7745698166044243233">Read More...</a></p>
           </div>
           <div class="col-md-7">
-            <a href="http://steamcommunity.com/games/596420/announcements/detail/1568807608827638582"><img src="assets/img/FMODAnnounce.png" width=100% /></a>
+            <a href="http://steamcommunity.com/games/596420/announcements/detail/7745698166044243233"><img src="assets/img/OSSAnnounce.png" width=100% /></a>
           </div>
         </div>
       </div>
