FIX mobile bugs
h1 and h2 font-size + app-marketing-grid block

--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
   <div class="block-xs-middle pb-5" style="vertical-align: top; padding-top: 8em;">
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 col-lg-12" style="text-align:center; text-transform:uppercase; letter-spacing: 3px;">
-          <h3 style="font-size:16pt;">A Benchmark in</h3>
-          <h1 style="font-size:48pt; font-family: MotivaSans-Bold;">Immersive Audio Solutions</h1>
-          <h2 style="font-size:30pt; margin-bottom:1em;">For games and VR</h2>
-          <h3 style="font-size:16pt; margin-bottom:2em">3D Sound API &bull; PC, Mobile SDK &bull; Unity, Unreal, FMOD Plugins</h3>
+        <div class="col-sm-12 col-lg-12 hero" style="text-align:center; text-transform:uppercase; letter-spacing: 3px;">
+          <h3>A Benchmark in</h3>
+          <h1 style="font-family: MotivaSans-Bold;">Immersive Audio Solutions</h1>
+          <h2 style="margin-bottom:1em;">For games and VR</h2>
+          <h3 style="margin-bottom:2em">3D Sound API &bull; PC, Mobile SDK &bull; Unity, Unreal, FMOD Plugins</h3>
           <a href="#learn-more" id="learn-more-button" class="btn btn-primary btn-lg text-uppercase" role="button">Learn More</a>
         </div>
       </div>
@@ -130,21 +130,21 @@
       </div>
     </div>
 
-    <div class="row app-marketing-grid">
+    <div class="row app-marketing-grid dark">
       <div class="col-md-4 px-4 mb-5">
         <img class="mb-1" src="assets/img/go-beyond-hrtf.png">
         <h6 class="text-uppercase" style="font-family: MotivaSans-Bold; margin-top: 2em; margin-bottom: 2em;">Go Beyond HRTF</h6>
-        <p style="color: #aaa">Use fully-featured spatial audio attuned to the physical attributes of your in-game geometry. Combine accurate occlusion, reflection, reverb and HRTF effects for natural sounding immersion.</p>
+        <p>Use fully-featured spatial audio attuned to the physical attributes of your in-game geometry. Combine accurate occlusion, reflection, reverb and HRTF effects for natural sounding immersion.</p>
       </div>
       <div class="col-md-4 px-4 mb-5">
         <img class="mb-1" src="assets/img/simplify-spatial-audio-design.png">
         <h6 class="text-uppercase" style="font-family: MotivaSans-Bold; margin-top: 2em; margin-bottom: 2em;">Simplify spatial audio design</h6>
-        <p style="color: #aaa">Easy to implement and deploy for all major audio engines, game engines and platforms. Tweak high level parameters to optimize immersion and performance quickly and easily.</p>
+        <p>Easy to implement and deploy for all major audio engines, game engines and platforms. Tweak high level parameters to optimize immersion and performance quickly and easily.</p>
       </div>
       <div class="col-md-4 px-4 mb-5">
         <img class="mb-1" src="assets/img/tailor-fidelity.png">
         <h6 class="text-uppercase" style="font-family: MotivaSans-Bold; margin-top: 2em; margin-bottom: 2em;">Tailor Fidelity</h6>
-        <p style="color: #aaa">Exercise full control over spatial effects - from fully automatic physical sound simulation, to unique handcrafted tuning and everything in-between.</p>
+        <p>Exercise full control over spatial effects - from fully automatic physical sound simulation, to unique handcrafted tuning and everything in-between.</p>
       </div>
     </div>
 
@@ -214,7 +214,7 @@
       </div>
     </div>
 
-    <div class="row app-marketing-grid" style="color:#000;">
+    <div class="row app-marketing-grid">
       <div class="col-md-4 px-4 mb-5">
         <img class="mb-1" src="assets/img/icon_propagation.png">
         <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000;">Realtime Sound Propagation</h6>
@@ -232,7 +232,7 @@
       </div>
     </div>
 
-    <div class="row app-marketing-grid" style="color:#000;">
+    <div class="row app-marketing-grid">
       <div class="col-md-4 px-4 mb-5">
         <img class="mb-1" src="assets/img/icon_3daudio.png">
         <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000;">3D Audio</h6>
@@ -250,7 +250,7 @@
       </div>
     </div>
 
-    <div class="row app-marketing-grid" style="color:#000;">
+    <div class="row app-marketing-grid">
       <div class="col-md-4 px-4 mb-5">
         <img class="mb-1" src="assets/img/icon_reverb.png">
         <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000;">Baked Propagation</h6>
@@ -328,8 +328,8 @@
       </div>
     </div>
 
-    <div class="row app-marketing-grid" style="color:#000;">
-      <div class="col-md-2 offset-md-1 px-2 mb-5">
+    <div class="row app-marketing-grid">
+      <div class="col-md-2 px-2 mb-5">
         <img class="mb-1" src="assets/img/icon_windows.png">
         <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000;">Windows</h6>
       </div>
@@ -354,8 +354,8 @@
       </div>
     </div>
 
-    <div class="row app-marketing-grid" style="color:#000;">
-      <div class="col-md-2 px-2 offset-md-1 mb-5">
+    <div class="row app-marketing-grid">
+      <div class="col-md-2 px-2 mb-5">
         <a href="downloads.html"><img class="mb-1" src="assets/img/icon_unity.png"></a>
         <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000;">Unity</h6>
       </div>
