--- a/downloads.html
+++ b/downloads.html
@@ -113,7 +113,7 @@
       </div>
     </div>
 
-    <div class="row app-marketing-grid" style="color:#000;">
+    <div class="row app-marketing-grid">
       <div class="col-md-4 px-4 mb-5">
         <img class="mb-1" src="assets/img/icon_unity_large.png">
         <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000; text-align: left; border-bottom: 4px solid #000; padding: 10px;">Unity Plugin</h6>
@@ -142,7 +142,7 @@
       </div>
     </div>
 
-    <div class="row app-marketing-grid" style="color:#000;">
+    <div class="row app-marketing-grid">
       <div class="col-md-4 px-4 mb-5">
         <img class="mb-1" src="assets/img/icon_c_api_large.png">
         <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000; text-align: left; border-bottom: 4px solid #000; padding: 10px;">C API</h6>
