Update main page and downloads page for Wwise plugin release
* Removed "coming soon" status under Wwise on the main page
* Added/updated Wwise logo images

--- a/index.html
+++ b/index.html
@@ -335,7 +335,8 @@
       </div>
       <div class="col-md-2 px-2 mb-5">
         <img class="mb-1" src="assets/img/icon_osx.png">
-        <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000;">MacOS</h6>
+        <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; color:#000;">macOS</h6>
+        <h6 class="text-uppercase" style="font-weight:bold; margin-bottom: 2em; color:#000;">iOS</h6>
       </div>
       <div class="col-md-2 px-2 mb-5">
         <img class="mb-1" src="assets/img/icon_linux.png">
@@ -374,7 +375,6 @@
       <div class="col-md-2 px-2 mb-5">
         <img class="mb-1" src="assets/img/icon_wwise.png">
         <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 1em; color:#000;">Wwise</h6>
-        <h6 style="text-transform: none; margin-bottom: 2em; color:#999;">Coming soon</h6>
       </div>
     </div>
 
