--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <h3>A Benchmark in</h3>
           <h1 style="font-family: MotivaSans-Bold;">Immersive Audio Solutions</h1>
           <h2 style="margin-bottom:1em;">For games and VR</h2>
-          <h3 style="margin-bottom:2em">3D Sound API &bull; PC, Mobile SDK &bull; Unity, Unreal, FMOD Plugins</h3>
+          <h3 style="margin-bottom:2em">3D Sound API &bull; PC, Mobile SDK &bull; Unity, Unreal, FMOD, Wwise Plugins</h3>
           <a href="#learn-more" id="learn-more-button" class="btn btn-primary btn-lg text-uppercase" role="button">Learn More</a>
         </div>
       </div>
@@ -289,15 +289,15 @@
 
     <div class="row">
       <div class="col-xs-10 offset-xs-1 col-sm-10 offset-sm-1 col-lg-10 offset-lg-1 white-gradient" style="padding: 4em;">
-        <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000; text-align: left; border-bottom: 4px solid #000; padding: 10px;">Steam Audio Open Source Release</h6>
+        <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 2em; color:#000; text-align: left; border-bottom: 4px solid #000; padding: 10px;">Steam Audio Wwise Plugin Release</h6>
         <div class="row" style="text-align: justify;">
           <div class="col-md-5">
-            <h4 style="font-family: MotivaSans-Bold">February 19, 2024</h4>
-            <p style="font-size: 14pt;">We are excited to announce that with the latest release of Steam Audio, the complete source code of the Steam Audio SDK is now available as open source under an Apache-2.0 license.</p>
-            <p style="font-size: 14pt;"><a href="http://steamcommunity.com/games/596420/announcements/detail/7745698166044243233">Read More...</a></p>
+            <h4 style="font-family: MotivaSans-Bold">December 17, 2024</h4>
+            <p style="font-size: 14pt;">We're excited to announce our Wwise plugin! This lets you use the full range of spatial audio functionality available in Steam Audio -- including HRTF, occlusion, physics-based sound propagation, and baking -- in projects that use Wwise.</p>
+            <p style="font-size: 14pt;"><a href="http://steamcommunity.com/games/596420/announcements/detail/544469629578249477">Read More...</a></p>
           </div>
           <div class="col-md-7">
-            <a href="http://steamcommunity.com/games/596420/announcements/detail/7745698166044243233"><img src="assets/img/OSSAnnounce.png" width=100% /></a>
+            <a href="http://steamcommunity.com/games/596420/announcements/detail/544469629578249477"><img src="assets/img/wwise_announcement.png" width=100% /></a>
           </div>
         </div>
       </div>
@@ -362,7 +362,7 @@
       </div>
       <div class="col-md-2 px-2 mb-5">
         <img class="mb-1" src="assets/img/icon_unreal.png">
-        <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 1em; color:#000;">Unreal Engine 4</h6>
+        <h6 class="text-uppercase" style="font-weight:bold; margin-top: 2em; margin-bottom: 1em; color:#000;">Unreal Engine</h6>
       </div>
       <div class="col-md-2 px-2 mb-5">
         <a href="downloads.html"><img class="mb-1" src="assets/img/icon_c_api.png"></a>
